--- a/odootask/views/task.xml
+++ b/odootask/views/task.xml
@@ -2,6 +2,11 @@
 <openerp>
     <data>
         <act_window id="action_odoo_task" res_model="odootask.task" name="捐赠物资管理" view_mode="tree,form"/>
+        <record model="ir.actions.act_window"  id="action_donator">
+        <field name="name">捐赠物资管理</field>    <!--这个字符串即课程对应列表或编辑界面的标题-->
+        <field name="res_model">res.partner</field>
+        <field name="domain" eval="[('partner_type','=','donator')]"/>
+    </record>
         <act_window id="action_odoo_task_unit" res_model="odootask.unit" name="计量单位"
                     view_mode="tree,form"/>
         <act_window id="action_odoo_task_track" res_model="odootask.track" name="物资追踪"
@@ -36,10 +41,8 @@
                     <field name="donator_id" string="捐赠人"/>
                     <field name="create_date" string="捐赠时间"/>
                     <field name="state" string="状态"/>
-                    <field name="donee_id" string="受赠人"/>
-                    <field name="donee_type" string="受赠人类别"/>
+                    <field name="community" string="社区"/>
                     <field name="remark" string="备注"/>
-                    <!-- <field name="image_url" string="图片路径"/> -->
                 </tree>
             </field>
         </record>
@@ -62,8 +65,7 @@
                             <field name="donator_id" string="捐赠人"/>
                             <field name="create_date" string="捐赠时间"/>
                             <field name="state" string="状态"/>
-                            <field name="donee_id" string="受赠人"/>
-                            <field name="donee_type" string="受赠人类别"/>
+                            <field name="community" string="社区"/>
                             <field name="remark" string="备注"/>
                         </group>
                         <notebook>
