--- a/odootask/templates/base.xml
+++ b/odootask/templates/base.xml
@@ -111,8 +111,8 @@
         </template>
 
         <template id="main_footer">
-            <div style="width:100%; position:fixed; left:0; bottom:0;text-align:center;">Copyright © 2016-2016
-                <a href="#" target="_blank">Dsz.</a>All Rights Reserved.
+            <div style="width:100%; position:fixed; left:0; bottom:0;text-align:center;">© 2016-2016
+                <a href="https://github.com/nyflxy" target="_blank">倪有发</a>.
             </div>
         </template>
 
