--- a/odootask/views/grant.xml
+++ b/odootask/views/grant.xml
@@ -2,17 +2,17 @@
 <openerp>
     <data>
 
-        <record id="task_view_tree" model="ir.ui.view">
-            <field name="name">odoo task view tree</field>
-            <field name="model">odootask.task</field>
+        <record id="grant_view_tree" model="ir.ui.view">
+            <field name="name">odoo grant view tree</field>
+            <field name="model">odootask.grant</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="number" string="捐赠编号"/>
+                    <field name="number" string="编号"/>
                     <field name="category_id" string="种类"/>
                     <field name="amount" string="数量"/>
                     <field name="unit" string="规格"/>
-                    <field name="donator_id" string="捐赠人"/>
-                    <field name="create_date" string="捐赠时间"/>
+                    <field name="donee_id" string="受赠人"/>
+                    <field name="create_date" string="时间"/>
                     <field name="state" string="状态"/>
                     <field name="community" string="社区"/>
                     <field name="remark" string="备注"/>
@@ -20,31 +20,24 @@
             </field>
         </record>
 
-        <record id="task_view_form" model="ir.ui.view">
-            <field name="name">odoo task view form</field>
-            <field name="model">odootask.task</field>
+        <record id="grant_view_form" model="ir.ui.view">
+            <field name="name">odoo grant view form</field>
+            <field name="model">odootask.grant</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
                         <group>
-                            <h1>
-                                <field name="number" string="编号"/>
-                            </h1>
-                        </group>
-
-                        <group>
                             <field name="category_id" string="种类"/>
                             <field name="amount" string="数量"/>
-                            <field name="unit" string="规格"/>
-                            <field name="donator_id" string="捐赠人"/>
-                            <field name="create_date" string="捐赠时间"/>
+                            <field name="donee_id" string="受赠人"/>
+                            <field name="create_date" string="时间"/>
                             <field name="state" string="状态"/>
                             <field name="remark" string="备注"/>
                         </group>
                         <notebook>
                             <page string="追踪">
                                 <field name="track">
-                                <tree string="物资追踪明细" editable="bottom">
+                                <tree string="追踪明细" editable="bottom">
                                     <field name="time" string="时间"></field>
                                     <field name="type" string="描述"></field>
                                     <field name="image" string="图片" widget='image' class="oe_avatar oe_left" options='{"preview_image": "image_medium"}'></field>
@@ -62,14 +55,13 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="good_search">
-            <field name="name">查询捐赠</field>
-            <field name="model">odootask.task</field>
+        <record model="ir.ui.view" id="grant_search">
+            <field name="name">查询发放物资</field>
+            <field name="model">odootask.grant</field>
             <field name="arch" type="xml">
                 <search>
                     <field name="number" string="编号"/>
                     <field name="category_id" string="种类"/>
-                    <field name="donator_id" string="捐赠人" />
                     <field name="donee_id" string="受赠人"/>
                     <field name="state" string="状态"/>
                 </search>
