--- a/odootask/static/css/good.css
+++ b/odootask/static/css/good.css
@@ -11,7 +11,7 @@ body{background-color: #white;}
 .good-tab-list .good-tab .tab-content{margin-left: -10px;}
 
 /*index.xml*/
-#nearby_donate_page .title{border:solid 1px;border-color:#DBDEC9;background-color: #DBDEC9;
+.nearby_donate_page .title{border:solid 1px;border-color:#DBDEC9;background-color: #DBDEC9;
     margin-top:20px;box-shadow: 0px 0px 20px 0px;
     font-style: italic;margin-left: 5px;}
 
