--- a/odootask/static/css/good.css
+++ b/odootask/static/css/good.css
@@ -16,7 +16,7 @@ body{background-color: #white;}
     font-style: italic;margin-left: 5px;}
 
 /*detail.xml*/
-#good_detail label{color:#B18F8F;width:100%;}
+#good_detail label{color:#B18F8F;}
 #track_detail label{color:#B18F8F;}
 #good_detail .detail-content{margin:10px;color:#8C8175;width:100%;}
 .good-detail-page-nav{font-size:18px;text-align: center;background-color: #EEEEEE;width:100%;
