--- a/odootask/templates/category_detail.xml
+++ b/odootask/templates/category_detail.xml
@@ -14,7 +14,7 @@
                             </div>
 
                             <div id="good_detail" style="margin-top:20px;width:100%;" class="col-xs-10">
-                                <img id="category_image" src="" alt="暂无图片" class="float-left" style="width:100%;height:200px;margin-bottom:10px;" />
+                                <img id="category_image" src="" alt="图片正在加载中..." class="float-left" style="width:100%;height:200px;margin-bottom:10px;text-align:center;vertical-align:middle;font-size: 20px;" />
                                 <div class="detail-content">
                                     <span>名称:</span><span id="name" class="detail-content-item"></span><br/>
                                     <span id="good_type" class="detail-content-item" style="display:none;"></span>
@@ -31,7 +31,7 @@
                                 </div>
 
                                 <div class="detail-content" style="width:100%;margin-top:20px;">
-                                    <button id="go_to_donate" class="btn btn-default" style="color: white;background: #f0ad4e;width: 80%;">我要义捐</button><br/><br/>
+                                    <button id="go_to_donate" class="btn btn-default" style="color: white;background: #f0ad4e;width: 90%;">我要义捐</button><br/><br/>
                                 </div>
 
                             </div>
