--- a/odootask/templates/donate_search.xml
+++ b/odootask/templates/donate_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        <template id="more_category" name="more_category">
+        <template id="donate_search" name="donate_search">
             <t t-call="odootask.main_layout">
                 <t t-set="title" t-value="''"/>
 
@@ -10,18 +10,16 @@
                    <div class="row" id="good_search_list_page">
                        <div id="good_upload_page" style="width:100%;">
                             <div class="col-xs-9" style="margin-top:10px;">
-                                <input id="community_name" type="text" placeholder="请输入社区名称关键词..." class="form-control"/>
+                                <input id="community_name" type="text" placeholder="请输入社区名称" class="form-control"/>
                             </div>
 
                             <div class="col-xs-3" style="margin-top:10px;">
-                                <a id="cancel_search" href="#">查询</a>
+                                <a id="do_search" href="#">查询</a>
                             </div>
                        </div>
 
                    </div>
                </div>
-
-                <img src="/odootask/static/images/load.gif" id="loading" style="display:none;"/>
 
                 <div class="good-tab-list container-fluid" id="more_category_list">
                 </div>
