--- a/odootask/templates/more_donate.xml
+++ b/odootask/templates/more_donate.xml
@@ -5,17 +5,18 @@
             <t t-call="odootask.main_layout">
                 <t t-set="title" t-value="''"/>
                 <div class="container-fluid">
-                    <div class="row" id="detail_page">
-                        <div id="good_upload_page" style="width:100%;">
+                    <div class="row">
+                        <div style="width:100%;">
 
                             <div class="col-xs-12 good-detail-page-nav">
                                 最近捐赠
                             </div>
-                            <div class="good-tab-list container-fluid" id="more_donate_list">
+                            <div class="container-fluid" id="more_donate_list">
                             </div>
                         </div>
                     </div>
                 </div>
+                <img src="/odootask/static/images/load.gif" id="loading" style="display:none;"/>
             </t>
             <t t-call="odootask.search_js"/>
         </template>
